# tutorial-v1

./: .gitigmore  .gitignore  LICENSE  README.md
sample-actor/: .gitignore  Cargo.toml  build.sh  ipfs.sh  rust-toolchain.toml
sample-actor/codec/: Cargo.toml
sample-actor/codec/src/: error.rs  lib.rs
sample-actor/impl/: Cargo.toml  key.pem  manifest.yaml
sample-actor/impl/src/: api.rs  dfn.rs  error.rs  lib.rs  oracle.rs  tests.rs  types.rs
sample-front-end/: .env.prod  .env.test  README.md  ipfs.sh  package-lock.json  package.json  vue.config.js
sample-front-end/public/: index.html
sample-front-end/src/: App.vue  filter.js  main.js  request.js  router.js  style.scss
sample-front-end/src/assets/: error.js
sample-front-end/src/components/: PageFooter.vue  PageHeader.vue  TeaIconButton.vue  TeaTableColumn.vue
sample-front-end/src/eth/: consts.js  help.js  index.js
sample-front-end/src/eth/abi/Coffee.sol/: COFFEE.json
sample-front-end/src/eth/abi/ERC20.sol/: ERC20Token.json
sample-front-end/src/eth/abi/ERC721.sol/: ERC721.json
sample-front-end/src/eth/abi/Lock.sol/: Lock.json
sample-front-end/src/eth/abi/Maintainer.sol/: Maintainer.json
sample-front-end/src/eth/abi/Storage.sol/: Storage.dbg.json  Storage.json
sample-front-end/src/eth/abi/TokenVesting.sol/: Address.json  Context.json  IERC20.json  Math.json  Ownable.dbg.json  Ownable.json  ReentrancyGuard.json  SafeERC20.json  SafeMath.json  TokenVesting.json
sample-front-end/src/eth/abi/interfaces/IERC20Permit.sol/: IERC20Permit.json
sample-front-end/src/layer2/: base.js  common.js  index.js  log.js  mem.js  tapp.js  task.js  txn.js  user.js
sample-front-end/src/store/: index.js  modal.js
sample-front-end/src/tea/: index.js  kn.js  squareroot.js  types.json  utils.js
sample-front-end/src/views/: AccountProfile.vue  Admin.vue  Home.vue  LogMain.vue  LoginPage.vue  TaskMain.vue  helper.js
sample-front-end/src/views/modals/: CommonFormModal.vue  DataDetailsModal.vue  LoginModal.vue  TransferBalanceModal.vue
sample-front-end/src/workflow/: Base.js
sample-txn-executor/: Cargo.toml  README.md  build.sh  ipfs.sh
sample-txn-executor/codec/: Cargo.toml
sample-txn-executor/codec/src/: error.rs  lib.rs  txn.rs
sample-txn-executor/impl/: Cargo.toml  key.pem  manifest.yaml
sample-txn-executor/impl/src/: account.rs  error.rs  lib.rs  sql.rs  tables.sql  txn.rs  utils.rs
(+6 files in other folders)
