[workspace]
members = ["codec", "impl"]
resolver = "2"

[workspace.dependencies]
tea-sdk = "=0.2.0-dev.22"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.94"
log = "0.4.17"
thiserror = "1.0.39"
tokio = "1.26.0"
prost = "0.11.8"
serde_derive = "1.0.153"
primitive-types = { version = "0.12.1", features = ["serde"] }
